added images and columns and color and borders

--- a/shelter/animal-shelter.html
+++ b/shelter/animal-shelter.html
@@ -8,42 +8,50 @@
   <h1>Cool Pets For Adoption</h1>
     <p>We have some really cool pets that need to be adopted.</p>
   <h2>Current Pets Available For Adoption:</h2>
+  <div class= "columns">
     <h3>Duke</h3>
-    <img src="" alt="">
-    <ul>
+    <img class="main" src="img/duke.jpg" alt="beagle dog">
+    <ul class="important">
       <li>3 year old dog</li>
       <li>medium energy</li>
       <li>good with kids</li>
     </ul>
-
+  </div>
+  <div class= "columns">
     <h3>Ben</h3>
-    <img src="" alt="">
-    <ul>
+    <img class="main" src="img/ben.jpg" alt="angry cat">
+    <ul class="important">
       <li>2 year old cat</li>
       <li>high energy</li>
-      <li>not good with kids</li>
+      <li><em>not</em> good with kids!!!</li>
     </ul>
-
+  </div>
+  <div class= "columns">
     <h3>Lucy</h3>
-    <img src="" alt="">
-    <ul>
-      <li>7 year old dog</li>
+    <img class="main" src="img/lucy.jpg" alt="fluffy puppy">
+    <ul class="important">
+      <li>10 month old puppy</li>
       <li>low energy</li>
       <li>good with kids</li>
     </ul>
+  </div>
+  <div class= "columns">
     <h3>Fido</h3>
-    <img src="" alt="">
-    <ul>
+    <img class="main" src="img/fido.jpg" alt="gold retriever">
+    <ul class="important">
       <li>1 year old dog</li>
       <li>high energy</li>
       <li>good with kids</li>
     </ul>
+  </div>
+  <div class= "columns">
     <h3>Fluffy</h3>
-    <img src="" alt="">
-    <ul>
+    <img class="main" src="img/fluffy.jpg" alt="tiger cat">
+    <ul class="important">
       <li>5 year old cat</li>
       <li>medium energy</li>
       <li>good with kids</li>
     </ul>
+  </div>
   </body>
 </html>
