add flex wrapping.

--- a/shelter/animal-shelter.html
+++ b/shelter/animal-shelter.html
@@ -4,10 +4,12 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>Pets For Adoption</title>
   </head>
+
   <body>
   <h1>Cool Pets For Adoption</h1>
     <p>We have some really cool pets that need to be adopted.</p>
   <h2>Current Pets Available For Adoption:</h2>
+  <div class="container">
   <div class= "columns">
     <h3>Duke</h3>
     <img class="main" src="img/duke.jpg" alt="beagle dog">
@@ -53,5 +55,6 @@
       <li>good with kids</li>
     </ul>
   </div>
+</div>
   </body>
 </html>
